force-app/main/default/objects/Reclamation__c/fields/Icone_Origine__c.field-meta.xml
<CustomField>
    <fullName>Icone_Origine__c</fullName>
    <formula>IF 
( ISPICKVAL(  Origine_de_la_demande__c    ,&quot;Web&quot;) 
, 
IMAGE(&quot;/resource/1551199653000/ICONS_CONTACT_Internet&quot;, &quot;Web&quot;, 40 ,40 ) 
, 
IF 
( 
ISPICKVAL(  Origine_de_la_demande__c   , &quot;Téléphone&quot;) 
, 
IMAGE(&quot;/resource/1551199676000/ICONS_CONTACT_Appel&quot;, &quot;Phone&quot;, 40 ,40) 
, 
IF 
( 
ISPICKVAL(  Origine_de_la_demande__c   , &quot;Email&quot;) 
, 
IMAGE(&quot;/resource/1552560061000/ICONS_CONTACT_Email&quot;, &quot;Email&quot;, 40 ,40) 
, 
&quot;&quot; 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone Origine</label>
    <type>Text</type>
</CustomField>