force-app/main/default/objects/Reclamation__c/fields/Icone_Priorite__c.field-meta.xml
<CustomField>
    <fullName>Icone_Priorite__c</fullName>
    <formula>IF 
( 
ISPICKVAL( Priorite__c  ,&quot;Élevée&quot;) 
, 
IMAGE(&quot;/resource/1552558947000/ICONS_ACT_HIGH_Priority&quot;, &quot;Élevée&quot;, 40 ,40) 
, 
IF 
( 
ISPICKVAL(Priorite__c,&quot;Moyenne&quot;) 
, 
IMAGE(&quot;/resource/1552559689000/ICONS_ACT_medium_priority&quot;, &quot;Moyenne&quot;, 40 ,40) 
, 
IF 
( 
ISPICKVAL( Priorite__c ,&quot;Faible&quot;) 
, 
IMAGE(&quot;/resource/1552558931000/ICONS_ACT_Priority_Low&quot;, &quot;Faible&quot;, 40 ,40) 
, 
&quot;&quot; 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone Priorité</label>
    <type>Text</type>
</CustomField>