force-app/main/default/objects/Reclamation__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <label>Objet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>