force-app/main/default/objects/Reclamation__c/fields/Origine_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Origine_de_la_demande__c</fullName>
    <label>Origine de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>En physique</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
                <default>true</default>
                <label>Téléphone</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>