force-app/main/default/objects/Reclamation__c/validationRules/VR_Reclamation_compte_ou_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Reclamation_compte_ou_contact</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK (
 Compte__c )
&amp;&amp;
ISBLANK (Contact__c)</errorConditionFormula>
    <errorMessage>Merci de rattacher cette réclamation à un compte ou à un contact.</errorMessage>
</ValidationRule>