force-app/main/default/objects/Reclamation__c/listViews/Mes_Reclamations.listView-meta.xml
<ListView>
    <fullName>Mes_Reclamations</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Contact__c</columns>
    <columns>Icone_Origine__c</columns>
    <columns>Icone_Priorite__c</columns>
    <columns>Statut__c</columns>
    <columns>Icone_Statut__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes Réclamations</label>
</ListView>